--- a/news.html
+++ b/news.html
@@ -32,7 +32,7 @@
             <img src="images/pcclogo.png" alt="">
             <p>Cronton Parish Council</p>
             <p>Parish Council Office</p>
-            <p>7, Hampton Drive</p>
+            <p>7 Hampton Drive</p>
             <p>Cronton</p>
             <p>WA8 5BZ</p>
         </div>
