--- a/contactus.html
+++ b/contactus.html
@@ -15,15 +15,12 @@
 
     <div> <img src="images/wat.jpg" alt="watch logo" class="watch"> </div>
     <h1>Cronton Home Watch Scheme Contact Information </h1>
-    <p>The Cronton Homewatch scheme has been set up by local people to aid local people to make Cronton a safer village
-        to live in,the homewatch scheme has been set up in partnership with the Cronton Parish council and Merseyside
-        Police
-        all community co ordinators are police checked and all documents are kept within the strictest gdpr guidliness
-        and your information will not be shared with anybody unless we get your permission granted first </p>
+    <p>The Cronton Homewatch scheme has been set up by local people to aid local people to make Cronton a safer village to live in the homewatch scheme has been set up in partnership with the Cronton Parish council and Merseyside Police all community co
+        ordinators are police checked and all documents are kept within the strictest gdpr guidliness and your information will not be shared with anybody unless we get your permission granted first </p>
     <div class="pictures">
         <div>
             <img src="images/crest.jpg" alt="">
-            <p>Foursquare tip</p>
+            <p> 1 Foursquare tip</p>
             <p>Police headquarters</p>
             <p>Canning Place</p>
             <p>Liverpool</p>
@@ -33,7 +30,7 @@
             <img src="images/pcclogo.png" alt="">
             <p>Cronton Parish Council</p>
             <p>Parish Council Office</p>
-            <p>7, Hampton Drive</p>
+            <p>7 Hampton Drive</p>
             <p>Cronton</p>
             <p>WA8 5BZ</p>
         </div>
