--- a/getinvolved.html
+++ b/getinvolved.html
@@ -14,19 +14,16 @@
     <button><a href="news.html">news</a></button>
     <div><img src="images/wat.jpg" alt="watch logo" class="watch" height=25% width="25%"></div>
     <h1>How to get involved In Cronton Homewatch Scheme </h1>
-    <p>The Cronton Homewatch scheme has been set up by local people to aid local people to make Cronton a safer village
-        to live in,the homewatch scheme has been set up in partnership with the Cronton Parish council and Merseyside
-        Police
-        if you would like to get involved with home watch and potentially be the coordinator for the part of the village
-        you can contact us through these channels </p>
+    <p>The Cronton Homewatch scheme has been set up by local people to aid local people to make Cronton a safer village to live in the homewatch scheme has been set up in partnership with the Cronton Parish council and Merseyside Police if you would like
+        to get involved with home watch and potentially be the coordinator for the part of the village you can contact us through these channels </p>
     <div class="pictures">
-        <div>
-            <img src="images/crest.jpg" alt="">
-            <p>Foursquare tip</p>
+        <div> <img src="images/crest.jpg" alt="">
+            <p> 1 Foursquare tip</p>
             <p>Police headquarters</p>
             <p>Canning Place</p>
             <p>Liverpool</p>
         </div>
+
 
         <div>
             <img src="images/pcclogo.png" alt="">
