--- a/index.html
+++ b/index.html
@@ -11,25 +11,21 @@
     <button><a href="index.html">home</a></button>
     <button><a href="contactus.html">contact us</a></button>
     <button><a href="getinvolved.html">get involved</a></button>
-    <button><a href="news.html">news</a></button>
+    <button><a href="news.html">news</a></button>-3
     <div>
-        <img src="images/wat.jpg" alt="watch logo" class="watch" height=25% width="25%">
+        <img src="images/wat.jpg" alt="watch logo" class="watch">
     </div>
     <h1>Welcome To Cronton Homewatch Scheme </h1>
-    <h4 class="home"> The Cronton Homewatch scheme has been set up by local people to aid local people to make Cronton a
-        safer village to live in,the homewatch scheme has been set up in partnership with the Cronton Parish council and
-        Merseyside Police
-        all community co ordinators are police checked and all documents are kept within the strictest gdpr guidliness
-        and your information will not be shared with anybody unless we get your permission granted first</h4>
+    <h4 class="home"> The Cronton Homewatch scheme has been set up by local people to aid local people to make Cronton a safer village to live in the homewatch scheme has been set up in partnership with the Cronton Parish council and Merseyside Police all community co
+        ordinators are police checked and all documents are kept within the 62strictest gdpr guidliness and your information will not be shared with anybody unless we get your permission granted first</h4>
     <div class="pictures">
-        <div> 
+        <div>
             <img src="images/crest.jpg" alt="">
-            <p>Foursquare tip</p>
+            <p> 1 Foursquare tip</p>
             <p>Police headquarters</p>
             <p>Canning Place</p>
             <p>Liverpool</p>
         </div>
-
         <div>
             <img src="images/pcclogo.png" alt="">
             <p>Cronton Parish Council</p>
